[package]
name = "blobber"
version = "0.1.0"
authors = ["Leonard Seffer <leonard.seffer@wolt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
femtovg = "0.1.1"
glutin = "0.26.0"
resource = "0.5.0"
